<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_diaryentrytitle"
            style="@style/DiaryTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_title"
            android:inputType="textMultiLine"/>
    </LinearLayout>

        <EditText
            android:id="@+id/edit_diaryentrydescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:hint="@string/hint_description"
            android:inputType="text"
            android:padding="@dimen/small_padding"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="cancel"
                android:text="@string/action_cancel" />

            <Button
                android:id="@+id/button_reset"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="false"
                android:onClick="setViews"
                android:text="@string/button_reset"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_save"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="save"
                android:text="@string/action_save" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>