<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/preview_entry_date"
            style="@style/DiaryTitleDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:text="@string/lorem_date" />

        <TextView
            android:id="@+id/preview_entry_title"
            style="@style/DiaryTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/lorem_title" />

    </LinearLayout>

    <TextView
        android:id="@+id/preview_entry_text"
        style="@style/EntryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/lorem_text" />

</LinearLayout>